# transpose

./: .env.example  .gitignore  CONTENT_FILTER_STRATEGY.md  Dockerfile  LICENSE  QA_REPORT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  validation-report.json
.github/workflows/: azure-static-web-apps-mango-forest-0563d4203.yml  deploy.yml  quality-gates.yml
.squad/: .first-run  .ralph-state.json  decisions-archive.md  decisions.md  gap_analysis.md  routing.md  team.md
.squad/casting/: history.json  policy.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-04-17T19-50-55Z-architecture-design.md  2026-04-17T20-30-pdf-visual-fix.md  2026-04-18T202558Z-critical-issues-sprint.md  2026-04-19T04-20-29Z-high-medium-sprint.md  2026-04-19T21-06-49Z-e2e-validation-and-issue-closure.md  2026-04-19T22-10-pdf-fixes-and-golden-qa.md  2026-04-20T14-39-golden-target-fix.md  2026-04-22T15-14-public-readiness-fixes.md  2026-05-20T22-55-workspace-framing-close.md  2026-05-20T23-10-06Z-open-questions-closed.md  2026-05-21-shiv-sutra-public-access-fix.md  2026-05-21T04-39-36-workspace-implementation-shipped.md  2026-05-22T15-19-session-resumption.md
.squad/orchestration-log/: 2026-04-17T00-00-00Z-build-session.md  2026-04-17T19-50-55Z-stilgar.md  2026-04-17T20-30-chani.md  2026-04-17T20-30-thufir.md  2026-04-18T202558Z-chani-chunk.md  2026-04-18T202558Z-chani-ocr.md  2026-04-18T202558Z-chani-translate.md  2026-04-18T202558Z-thufir-tests.md  2026-04-19T04-20-29Z-chani-export.md  2026-04-19T04-20-29Z-chani-foreword.md  2026-04-19T04-20-29Z-chani-glossary.md  2026-04-19T04-20-29Z-thufir-tests-high.md  2026-04-19T21-06-49Z-chani-gates-fix.md  2026-04-19T21-06-49Z-chani-revalidation.md  2026-04-19T21-06-49Z-stilgar-issue-closure.md  2026-04-19T22-10-chani.md  2026-04-19T22-10-thufir.md  2026-04-20T14-39-UTC-chani.md  2026-04-20T14-39-UTC-thufir.md  2026-04-22T15-14-idaho.md  2026-04-22T15-14-stilgar.md  2026-04-22T15-14-thufir.md  (+10 more)
docs/: api-contracts.md  architecture.md  auth.md  observability.md  project-structure.md
infra/: README.md  main.bicep  main.bicepparam  main.json
infra/labse/: app.py  (+2 more)
migrations/: env.py
scripts/: azure-setup.sh  backfill_workspace.py  create_test_pdf.py  e2e_validation_run.py  generate_audiobook.py  generate_golden_target_pdf.py
tests/: conftest.py
(+224 files in other folders)
