[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transpose"
version = "0.1.0"
description = "Agentic pipeline for translating Hindi/Punjabi books to English with cultural term preservation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Mani" }]

dependencies = [
    # Azure SDK
    "azure-ai-documentintelligence>=1.0.0",
    "azure-storage-blob>=12.20.0",
    "azure-identity>=1.17.0",
    "azure-keyvault-secrets>=4.8.0",
    # OpenAI (Azure-compatible)
    "openai>=1.40.0",
    # Anthropic (for Oracle Layer C quality judge)
    "anthropic>=0.39.0",
    # Database
    "asyncpg>=0.30.0",
    # PDF processing
    "pymupdf>=1.24.0",
    # ePub generation
    "ebooklib>=0.18",
    # PDF generation
    "weasyprint>=62.0",
    # Configuration
    "pydantic-settings>=2.4.0",
    # Observability
    "azure-monitor-opentelemetry>=1.6.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    # Tokenization (for chunk sizing)
    "tiktoken>=0.7.0",
    # CLI
    "click>=8.1.0",
    # Async utilities
    "tenacity>=9.0.0",
    # Database migrations
    "alembic>=1.13.0",
    # HTTP API
    "aiohttp>=3.9.0",
    # HTTP server
    "aiohttp>=3.9.0",
    # TTS / Audiobook
    "azure-cognitiveservices-speech>=1.40.0",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[project.scripts]
transpose = "transpose.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/transpose"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (may require external services)",
    "regression: golden-reference regression tests (require pipeline output)",
    "slow: tests that are slow or need a full pipeline run",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
